--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "caniuse-lite": "^1.0.30001023",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "lite-server": "^2.5.4",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
